# decidable-validation

./: LICENSE  README.md  decidable-validation.cabal  stack.yaml
src/Data/Functor/: Validation.hs
