name:                decidable-validation
version:             0.1
synopsis:            Validation through Divisible and Decidable.
description:         Please see README.md
homepage:            https://github.com/fizruk/decidable-validation
bug-reports:         https://github.com/fizruk/decidable-validation/issues
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@getshoptv.com
copyright:           (c) 2015, Nickolay Kudasov
category:            Web
build-type:          Simple
extra-source-files:
    README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Functor.Validation
  build-depends:       base == 4.*
                     , contravariant
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fizruk/decidable-validation.git
